--- a/brandstory.html
+++ b/brandstory.html
@@ -53,7 +53,7 @@
     <nav>
         <ul>
             <li><h2><a href="./index.html">사업소개</a></h2></li>
-            <li><h2><a href="#none">BRANDSTORY</a></h2></li>
+            <li class="selected"><h2><a href="#none">BRANDSTORY</a></h2></li>
             <li><h2><a href="./product.html">PRODUCT</a></h2></li>
             <li><h2><a href="./contact_us.html">ContactUs</a></h2></li>
         </ul>
@@ -72,18 +72,18 @@
             <div class="mission-content">
                 <p>인스팅터스는 기업이 사회 문제를 해결하는 주체가 될 수 있다는 믿음 속에 시작되었습니다. 우리는 경제적 성과를 놓치지 않으면서 성과 재생산 건강과 권리를 실현할 방법을 탐구하고 실행합니다. 또한, ESG 경영을 토대로 경제적, 환경적, 사회적 지속가능성을 추구합니다.</p>
             </div>
-            <button>더 알아보기</button>
-        </div>
-        <div class="main-title">
-            <span>2</span>
-            <div class="middle-line"></div>
-            <h3>인스팅터스만의 장점</h3>
+            <button><a href="https://cheremimaka.com/brand/mission.html">더 알아보기</a></button>
         </div>
         <div class="pros-wrap">
+            <div class="main-title">
+                <span>2</span>
+                <div class="middle-line"></div>
+                <h3>인스팅터스만의 장점</h3>
+            </div>
             <div class="pros-row">
                 <div class="pros-content">
                     <div class="pros-content-img-wrap">
-                        <img src="" alt="">
+                        <img src="./img/lab_icon.png" alt="">
                     </div>
                     <div class="pros-text-wrap">
                         <h3>2022년 의료기기 윤활제 제조 시설 및 클린룸 구축</h3>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="pros-content">
                     <div class="pros-content-img-wrap">
-                        <img src="" alt="">
+                        <img src="./img/production_icon.png" alt="">
                     </div>
                     <div class="pros-text-wrap">
                         <h3>2020년 의약외품 생리팬티 제조 시설 구축</h3>
@@ -101,7 +101,7 @@
             <div class="pros-row">
                 <div class="pros-content">
                     <div class="pros-content-img-wrap">
-                        <img src="" alt="">
+                        <img src="./img/patent_icon.png" alt="">
                     </div>
                     <div class="pros-text-wrap">
                         <h3>2017년 기업부설연구소 수립 및 2021년 윤활제 조성물 특허 획득, MD루브 상표권 획득</h3>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="pros-content">
                     <div class="pros-content-img-wrap">
-                        <img src="" alt="">
+                        <img src="./img/cycle_icon.png" alt="">
                     </div>
                     <div class="pros-text-wrap">
                         <h3>연구, 허가, 생산, 품질 프로세스 구축</h3>
@@ -124,10 +124,6 @@
                 <h3>CERTIFICATE</h3>
             </div>
             <div class="certificate-content">
-                <div class="certificate-content-img-wrap">
-                    <img src="" alt="">
-                </div>
-                <div class="certificate-middle-line"></div>
                 <div class="certificate-content-text-wrap">
                     <h3>ISO 9001 인증, 기업부설 연구소 인증</h3>
                     <p>체레미 마카는 ISO 9001 품질경영인증을 획득하여 모든 제품을 체계적인 
@@ -135,10 +131,17 @@
                         현재까지 유지하고 있습니다. 
                     </p>
                 </div>
+                <div class="certificate-middle-line"></div>
+                <div class="certificate-content-img-wrap">
+                    <img src="./img/iso_certificate01.jpg" alt=""/>
+                    <img src="./img/certificate02.jpg" alt=""/>
+                </div>
             </div>
             <div class="certificate-content">
                 <div class="certificate-content-img-wrap">
-                    <img src="" alt="">
+                    <img src="./img/b-corp.png" alt=""/>
+                    <img src="./img/ocs.png" alt=""/>
+                    <img src="./img/rri.png" alt=""/>
                 </div>
                 <div class="certificate-middle-line"></div>
                 <div class="certificate-content-text-wrap">
@@ -151,13 +154,16 @@
                 </div>
             </div>
             <div class="certificate-content">
-                <div class="certificate-content-img-wrap">
-                    <img src="" alt="">
-                </div>
-                <div class="certificate-middle-line"></div>
                 <div class="certificate-content-text-wrap">
                     <h3>의료기기 수입 인증, 의약외품 수입 허가, 의약외품 제조 허가, 특허증</h3>
                     <p>체레미 마카는 의료기기 2등급 의료용 윤활제의 수입 인증, 의약외품 생리컵의 수입 허가, 의약외품 생리팬티의 제조 허가를 갖고 있으며, 윤활제 조성물에 대한 특허를 갖고 있습니다.</p>
+                </div>
+                <div class="certificate-middle-line"></div>
+                <div class="certificate-content-img-wrap">
+                    <img src="./img/certificate_eve.png" alt=""/>
+                    <img src="./img/certificate_light.png" alt=""/>
+                    <img src="./img/certificate_mdlube.png" alt=""/>
+                    <img src="./img/certificate03.jpg" alt=""/>
                 </div>
             </div>
         </div>
