--- a/contact_us.html
+++ b/contact_us.html
@@ -55,7 +55,7 @@
             <li><h2><a href="./index.html">사업소개</a></h2></li>
             <li><h2><a href="./brandstory.html">BRANDSTORY</a></h2></li>
             <li><h2><a href="./product.html">PRODUCT</a></h2></li>
-            <li><h2><a href="#none">ContactUs</a></h2></li>
+            <li class="selected"><h2><a href="#none">ContactUs</a></h2></li>
         </ul>
     </nav>
     <div class="contact-wrap">
