--- a/product.html
+++ b/product.html
@@ -54,7 +54,7 @@
         <ul>
             <li><h2><a href="./index.html">사업소개</a></h2></li>
             <li><h2><a href="./brandstory.html">BRANDSTORY</a></h2></li>
-            <li><h2><a href="#none">PRODUCT</a></h2></li>
+            <li class="selected"><h2><a href="#none">PRODUCT</a></h2></li>
             <li><h2><a href="./contact_us.html">ContactUs</a></h2></li>
         </ul>
     </nav>
