--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <nav>
         <ul>
-            <li><h2><a href="#none">사업소개</a></h2></li>
+            <li class="selected"><h2><a href="#none">사업소개</a></h2></li>
             <li><h2><a href="./brandstory.html">BRANDSTORY</a></h2></li>
             <li><h2><a href="./product.html">PRODUCT</a></h2></li>
             <li><h2><a href="./contact_us.html">ContactUs</a></h2></li>
